# Hakhton-1--AI-Textbook-

./: .gitignore  CHATBOT_FIX_SUMMARY.md  CLEANUP_RECORD.md  CLEANUP_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STEPS.md  Dockerfile  FINAL_DEPLOYMENT_INSTRUCTIONS.md  FINAL_PROJECT_STRUCTURE.md  FIX_FRONTEND_CONNECTION.md  IMPLEMENTATION_SUMMARY.md  README.md  VERCEL_DEPLOYMENT_CHECK.md  VERCEL_DEPLOYMENT_CHECKLIST.md  VERCEL_DEPLOYMENT_GUIDE.md  cleanup.ps1  debug_backend.py  frontend_server.js  initialize_knowledge_base.sh  package-lock.json  package.json  railway.toml  robust_backend.py  run_test_server.py  start_backend.bat  start_backend_with_env.py  start_backend_with_real_keys.py  start_lazy_backend.py  start_production_backend.py  test_api_endpoints.py  test_backend.py  test_chatbot.html  test_chatbot.py  test_connection.js
.claude/: settings.local.json
backend/: .nixpacks.toml  BACKEND_README.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Pipfile  README.md  api.py  api_instance.py  api_lazy_init.py  index.py  init_knowledge_base.py  main.py  minimal_api.py  minimal_requirements.txt  process_book.py  pyproject.toml  quick_test.py  railway.toml  requirements.txt  run_all.py  server.py  simple_api.py  start_api.py  start_server.py  test_api.py  test_chatbot_functionality.py  test_deployment.py  test_endpoint.py  test_import.py  test_setup.py  validate.py  vercel.json  vercel_app.py  vercel_test.py
my-book/: docusaurus.config.ts  package-lock.json  package.json
rag-book-chatbot/: README.md  setup.ps1  setup.sh  (+2 more)
(+38 files in other folders)
