[project]
name = "rag-chatbot-backend"
version = "0.1.0"
description = "Backend for RAG Chatbot with Cohere and Qdrant integration"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-dotenv==1.0.0",
    "cohere",
    "qdrant-client",
    "requests",
    "beautifulsoup4"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[project.scripts]
start = "minimal_api:app"